Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29716

Crash on code model update

    XMLWordPrintable

Details

    • All
    • 05ce5ea14 (12.0)

    Description

      Here it is reproducible by

      • open a session holding a qbs build of QC
      • before the project could be read completely start searching for a file of the project inside the locator (only typing, no Enter)

       

      QC crashed while preparing codemodel.. but tbh it also might be some interference with qmljs (semantic info updater) - qml parsing almost finished (and started a 2nd one) and one of the qbs files where open inside QC after opening the session.

       

      Attachments

        1. cppIndexingCrash.log
          913 kB
        2. crash.txt
          35 kB
        3. qtcreator-12-cppeditor-crash.png
          qtcreator-12-cppeditor-crash.png
          228 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes